test/vm/errors/parser/unclosed_brace.ach
// Parser error: unclosed brace
// Expected: error about expected `}` or unexpected EOF

fn broken() {
    let x = 1
    let y = 2

